# mlops_experience

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
notebooks/: Mistral_finetune.ipynb  question_answering.ipynb  text_classification.ipynb  text_classification_mlflow.ipynb  train.ipynb
