[tool.poetry]
name = "mlops-experience"
version = "0.1.0"
description = "Experience for MLops"
authors = ["luffy2106 <tkdang@assystem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
