[tool.poetry]
name = "mlops-experience"
version = "0.1.0"
description = "Experience for MLops"
authors = ["luffy2106 <tkdang@assystem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
mlflow = "^2.19.0"
datasets = "^3.2.0"
evaluate = "^0.4.3"
ipywidgets = "^8.1.5"
transformers = "^4.47.1"
accelerate = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
